# tiny386

./: Makefile  README.md  amd64.c  ini.c  ne2000.c  sb16.c  win32.c
.github/workflows/: build.yml
esp/: sdkconfig.jc3248w535
esp/main/: CMakeLists.txt  esp_main.c  idf_component.yml  usb_hid.c  usb_input.c
rawdraw/: CNFGWinDriver.c
scripts/slirp/: Makefile
wasm/: main.c
wasm/html/: index.html  main.js
